--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </body>
   
   <style>
+    <div class="css-shapes-preview"></div>
+
     body {
       background-color:green;
       color:#fff;
